--- a/EXAMPLE.env
+++ b/EXAMPLE.env
@@ -4,3 +4,10 @@ PHONE_NUMBER=61123456789
 
 # The x-auth-token is used to authenticate the user. Run login_retrieve_auth_token.py to get it
 AUTH_TOKEN=fb123124-hehexd-...
+
+######
+# The following is optional, for the email notification feature
+EMAIL_SENDER_ADDRESS=
+EMAIL_SENDER_PASSWORD=
+
+EMAIL_RECIEVER_ADDRESS=
