implement a automatic email notifcation system

--- a/EXAMPLE.env
+++ b/EXAMPLE.env
@@ -8,6 +8,8 @@ AUTH_TOKEN=fb123124-hehexd-...
 ######
 # The following is optional, for the email notification feature
 EMAIL_SENDER_ADDRESS=
+# You will need to generate an 'app password' for your email. Refer to `README.md`. 
+# More info: `https://myaccount.google.com/apppasswords`
 EMAIL_SENDER_PASSWORD=
 
 EMAIL_RECIEVER_ADDRESS=
